# digital-fte

./: .env.example  .gitignore  .txt  QWEN.md  README.md  REFACTOR.md  doc.md  linkedin-tools.txt  main.py  payload.json  pyproject.toml  requirements.txt  skills-lock.json
BaseWatcher/: __init__.py  base_watcher.py
FilesystemWatcher/: main.py
GmailWatcher/: main.py
GmailWatcher/helpers/: __init__.py  authenticate.py  check_for_updates.py  create_action_files.py  mark_as_read.py  process_ids.py
Orchestrator/: REFACTOR.md  main.py
Orchestrator/helpers/: __init__.py  count_files.py  ensure_directories.py  execute_email_action.py  execute_linkedin_action.py  find_qwen_executable.py  get_approved_actions.py  get_needs_action_files.py  get_status.py  print_status.py  process_approved_action.py  ralph_loop.py  setup_logging.py  start_mcp_server.py  start_watcher.py  stop_mcp_server.py  stop_watcher.py  trigger_qwen_processing.py  update_dashboard.py
WhatsappWatcher/: main.py
WhatsappWatcher/helpers/: __init__.py  check_auth_status.py  check_for_updates.py  close_browser.py  create_action_file.py  initialize_browser.py  load_processed_messages.py  run_watcher.py  save_processed_messages.py
config/: __init__.py  settings.py
mcp-servers/email/: server.py
mcp-servers/linkedin/: server.py
scripts/: __init__.py  base_watcher.py  filesystem_watcher.py  gmail_watcher.py  mcp-client.py  orchestrator.py  whatsapp_watcher.py
vault/: Business_Goals.md  Company_Handbook.md  Dashboard.md
vault/.obsidian/: workspace.json
vault/Needs_Action/: hello.txt  (+3 more)
(+4 files in other folders)
